# Ipopt

./: .gitattributes  .gitignore  .gitmodules  .last_merge  .travis.yml  1-skeleton_2TutorialCpp__nlp_8hpp.html  1-skeleton_2TutorialCpp__nlp_8hpp_source.html  2-mistake_2TutorialCpp__nlp_8hpp.html  2-mistake_2TutorialCpp__nlp_8hpp_source.html  3-solution_2TutorialCpp__nlp_8hpp.html  3-solution_2TutorialCpp__nlp_8hpp_source.html  AUTHORS  AUTHORS.html  AmplTNLP_8hpp.html  AmplTNLP_8hpp.js  AmplTNLP_8hpp_source.html  CHANGELOG.html  COMPILE.md  ChangeLog  ChangeLog.md  ChangeLog_8md.html  Dependencies  Externals  FAQ.html  HS071_8java.html  HS071_8java_source.html  HSLLoader_8h.html  HSLLoader_8h.js  HSLLoader_8h_source.html  IMPL.html  INSTALL  INSTALL.html  INTERFACES.html  IpAdaptiveMuUpdate_8hpp.html  IpAdaptiveMuUpdate_8hpp.js  IpAdaptiveMuUpdate_8hpp_source.html  IpAlgBuilder_8hpp.html  IpAlgBuilder_8hpp.js  IpAlgBuilder_8hpp_source.html  IpAlgStrategy_8hpp.html  (+1979 more)
Algorithm/: IpAdaptiveMuUpdate.cpp  IpAdaptiveMuUpdate.hpp  IpAlgBuilder.cpp  IpAlgBuilder.hpp  IpAlgStrategy.hpp  IpAlgorithmRegOp.cpp  IpAlgorithmRegOp.hpp  IpAugRestoSystemSolver.cpp  IpAugRestoSystemSolver.hpp  IpAugSystemSolver.hpp  IpBacktrackingLSAcceptor.hpp  IpBacktrackingLineSearch.cpp  IpBacktrackingLineSearch.hpp  IpCGPenaltyLSAcceptor.cpp  IpCGPenaltyLSAcceptor.hpp  IpCGSearchDirCalc.cpp  IpCGSearchDirCalc.hpp  IpConvCheck.hpp  IpDefaultIterateInitializer.cpp  IpDefaultIterateInitializer.hpp  IpEqMultCalculator.hpp  IpExactHessianUpdater.cpp  IpExactHessianUpdater.hpp  IpFilter.cpp  IpFilter.hpp  IpFilterLSAcceptor.cpp  IpFilterLSAcceptor.hpp  IpFilterLineSearch.cpp  IpFilterLineSearch.hpp  IpGradientScaling.cpp  IpGradientScaling.hpp  IpHessianUpdater.hpp  IpIpoptAlg.cpp  IpIpoptAlg.hpp  IpIpoptCalculatedQuantities.cpp  IpIpoptCalculatedQuantities.hpp  IpIpoptData.cpp  IpIpoptData.hpp  IpIpoptNLP.hpp  IpIterateInitializer.hpp  (+64 more)
Algorithm/LinearSolvers/: IpLinearSolversRegOp.cpp  IpLinearSolversRegOp.hpp  IpMa27TSolverInterface.cpp  IpMa27TSolverInterface.hpp  IpMa57TSolverInterface.cpp  IpMa57TSolverInterface.hpp  IpMc19TSymScalingMethod.cpp  IpMc19TSymScalingMethod.hpp  IpMumpsSolverInterface.cpp  IpMumpsSolverInterface.hpp  IpPardisoSolverInterface.cpp  IpPardisoSolverInterface.hpp  IpSparseSymLinearSolverInterface.hpp  IpSymLinearSolver.hpp  IpTAUCSSolverInterface.cpp  IpTAUCSSolverInterface.hpp  IpTSymLinearSolver.cpp  IpTSymLinearSolver.hpp  IpTSymScalingMethod.hpp  IpTripletToCSRConverter.cpp  IpTripletToCSRConverter.hpp  IpWsmpSolverInterface.cpp  IpWsmpSolverInterface.hpp  Makefile.am  Makefile.in
Apps/AmplSolver/: AmplTNLP.cpp  AmplTNLP.hpp  Makefile.am  Makefile.in  ampl_ipopt.cpp
Apps/CUTErInterface/: CUTErInterface.f  Makefile.am  Makefile.in
Apps/CompositeInterface/: CompositeNLP.cpp  CompositeNLP.hpp  Makefile.am  Makefile.in  comp_ampl_ipopt.cpp
Apps/StdInterface/: IpInterfaceTypes.hpp  IpIpoptApplication.cpp  IpIpoptApplication.hpp  IpStdCInterface.cpp  IpStdFInterface.c  IpStdInterfaceTNLP.cpp  IpStdInterfaceTNLP.hpp  Makefile.am  Makefile.in
Common/: IpBlas.hpp  IpCachedResults.hpp  IpCompoundMatrix.cpp  IpCompoundMatrix.hpp  IpCompoundSymMatrix.cpp  IpCompoundSymMatrix.hpp  IpCompoundVector.cpp  IpCompoundVector.hpp  IpDebug.cpp  IpDebug.hpp  IpDiagMatrix.cpp  IpDiagMatrix.hpp  IpException.hpp  IpIdentityMatrix.cpp  IpIdentityMatrix.hpp  IpIpoptType.cpp  IpIpoptType.hpp  IpJournalist.cpp  IpJournalist.hpp  IpMatrix.cpp  IpObserver.cpp  IpObserver.hpp  IpOptionsList.cpp  IpOptionsList.hpp  IpReferenced.cpp  IpReferenced.hpp  IpRegOptions.cpp  IpRegOptions.hpp  IpScaledMatrix.cpp  IpScaledMatrix.hpp  IpSmartPtr.hpp  IpSumMatrix.cpp  IpSumMatrix.hpp  IpSumSymMatrix.cpp  IpSumSymMatrix.hpp  IpSymScaledMatrix.cpp  IpSymScaledMatrix.hpp  IpTaggedObject.cpp  IpTaggedObject.hpp  IpTypes.hpp  (+7 more)
IPOPT/: Makefile.am  Makefile.in
IPOPT/AMPL_interface/: Makefile.am  Makefile.in  get_amplmu.f  ipoptAMPL.c  ipopt_getdata.f
IPOPT/CUTEr_interface/: CUTE.INC  CUTEr_interface_main.F  Makefile.am  Makefile.in  cute_init.F  eval_a.F  eval_c.F  eval_f.F  eval_g.F  eval_h.F  eval_hesscon_v.F  eval_hesslag_v.F  eval_hessobj_v.F
IPOPT/include/: Ipopt.h.in  Ipopt_Interface.h.in  Makefile.am  Makefile.in  config.h.in
IPOPT/ipopt/: IPOPT.INC  Ipopt_Interface.c  Makefile.am  Makefile.in  TIMER.INC  armijo.f  aug_lag.f  c_out.f  calc_bar.f  calc_nrm.f  check_basis.f  check_stop.F  compute_y.f  constr.F  cutalpha.f  (+77 more)
Interfaces/: IpAlgTypes.hpp  IpInterfacesRegOp.cpp  IpInterfacesRegOp.hpp  IpIpoptApplication.cpp  IpIpoptApplication.hpp  IpMatrix.hpp  IpNLP.hpp  IpPDSystemSolver.hpp  IpReturnCodes.h  IpReturnCodes.inc  IpReturnCodes_inc.h  IpSolveStatistics.cpp  IpSolveStatistics.hpp  IpStdCInterface.cpp  IpStdCInterface.h  IpStdFInterface.c  IpStdInterfaceTNLP.cpp  IpStdInterfaceTNLP.hpp  IpSymMatrix.hpp  IpTNLP.hpp  IpTNLPAdapter.cpp  IpTNLPAdapter.hpp  IpVector.hpp  Makefile.am  Makefile.in  ipopt_addlibs_f.txt.in
Ipopt/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  compile  configure  configure.ac  ipopt-uninstalled.pc.in  ipopt.pc.in
LinAlg/: IpBlas.cpp  IpBlas.hpp  IpCompoundMatrix.cpp  IpCompoundMatrix.hpp  IpCompoundSymMatrix.cpp  IpCompoundSymMatrix.hpp  IpCompoundVector.cpp  IpCompoundVector.hpp  IpDenseGenMatrix.cpp  IpDenseGenMatrix.hpp  IpDenseSymMatrix.cpp  IpDenseSymMatrix.hpp  IpDenseVector.cpp  IpDenseVector.hpp  IpDiagMatrix.cpp  IpDiagMatrix.hpp  IpExpansionMatrix.cpp  IpExpansionMatrix.hpp  IpIdentityMatrix.cpp  IpIdentityMatrix.hpp  IpLapack.cpp  IpLapack.hpp  IpLowRankUpdateSymMatrix.cpp  IpLowRankUpdateSymMatrix.hpp  IpMatrix.cpp  IpMatrix.hpp  IpMultiVectorMatrix.cpp  IpMultiVectorMatrix.hpp  IpScaledMatrix.cpp  IpScaledMatrix.hpp  IpSumMatrix.cpp  IpSumMatrix.hpp  IpSumSymMatrix.cpp  IpSumSymMatrix.hpp  IpSymMatrix.cpp  IpSymMatrix.hpp  IpSymScaledMatrix.cpp  IpSymScaledMatrix.hpp  IpVector.cpp  IpVector.hpp  (+4 more)
OTHERS/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in  ipopt.pc.in
test/: Makefile.am  Makefile.in  emptynlp.cpp  getcurr.cpp  run_unitTests.in
(+2127 files in other folders)
